# Lectures

./: .gitignore  LICENSE  README.md
2111_Como-intro-to-deeplearning/: 1-start.ipynb  1c-autoreg.ipynb  2a-mnist.ipynb  2b-generative.ipynb  3a-policy-gradient.ipynb  3b-policy-gradient-harder.ipynb  3c-cartpole.ipynb  4-nqs-ising.ipynb  README.md
21como-intro-to-deeplearning/: 1-start.ipynb  2a-mnist.ipynb  2b-generative.ipynb  3a-policy-gradient.ipynb  3b-policy-gradient-harder.ipynb  3c-cartpole.ipynb  4-nqs-ising.ipynb  vae_utils_2.py
2202_NetKet/: 01_intro.ipynb  02_netket_orig.ipynb  README.md
2204_Toulouse-jax-netket/: 1-start.ipynb  2-nqs-ising.ipynb  3-nqs-dynamics.ipynb
2206_Julia/1_projects/: Manifest.toml  environments.ipynb
2206_Julia/1_projects/sharedproject/: code.ipynb
2206_Julia/2_linear_algebra/: 1_linalg.ipynb  2_ed_quantum_ising.ipynb
2209_Munich/: Dynamics.ipynb  pyproject.toml
22NetKet/: 01_intro.ipynb
22toulouse-jax-netket/: 1-start.ipynb  2-nqs-ising.ipynb  3-nqs-dynamics.ipynb
2301_Pisa/: 1-jax.ipynb  2-nqs-ising.ipynb  3-dynamics.ipynb
2304_Roscoff/: variational_intro.ipynb
2307_Trento/: 1_building.ipynb  1_building_sol.ipynb  2_qgt_dynamics.ipynb
2307_Trento/.jupyter/desktop-workspaces/: default-37a8.jupyterlab-workspace
2404_ICTP/: 1-vmc-from-scratch-nosolution.ipynb  2_qgt_dynamics.ipynb
2404_ICTP/.jupyter/desktop-workspaces/: default-37a8.jupyterlab-workspace
2406_LesHouches/: 1-tutorial_vmc.ipynb
